unpackaged/main/default/objects/DSCORGPKG__OppAlert__c/DSCORGPKG__OppAlert__c.object-meta.xml
<CustomObject>
    <label>DiscoverOrg OppAlert</label>
    <nameField>
        <displayFormat>Op-{0000}</displayFormat>
        <label>OppAlert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DiscoverOrg OppAlerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>