unpackaged/main/default/objects/DSCORGPKG__OppAlert__c/fields/DSCORGPKG__Account__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>OppAlerts</relationshipName>
    <type>Lookup</type>
</CustomField>