unpackaged/main/default/objects/DSCORGPKG__OppAlert__c/fields/DSCORGPKG__Change_in_Surge_Score__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Change_in_Surge_Score__c</fullName>
    <label>Change in Signal Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>