unpackaged/main/default/objects/DSCORGPKG__OppAlert__c/fields/DSCORGPKG__Contributory_Topics__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Contributory_Topics__c</fullName>
    <label>Topics</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>