unpackaged/main/default/objects/DSCORGPKG__OppAlert__c/fields/DSCORGPKG__Location__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Location__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>