unpackaged/main/default/objects/DSCORGPKG__OppAlert__c/fields/DSCORGPKG__Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Opportunity_Type__c</fullName>
    <label>Categories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>