unpackaged/main/default/objects/DSCORGPKG__OppAlert__c/fields/DSCORGPKG__Rank__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Rank__c</fullName>
    <label>Rank(Retired)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>