unpackaged/main/default/objects/DSCORGPKG__OppAlert__c/fields/DSCORGPKG__Surge_Score__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Surge_Score__c</fullName>
    <label>Signal Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>