unpackaged/main/default/objects/DSCORGPKG__OppAlert__c/fields/DSCORGPKG__Week_Ending__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Week_Ending__c</fullName>
    <label>Week Ending</label>
    <type>DateTime</type>
</CustomField>